pizdunstvo, trees correction, model changs on show result